# TreasureChest

./: .gitignore  CMakeLists.txt  README.md  TreasureChest.sln  TreasureChest.sln.nunit  UI Design.mbp
TreasureChest/: Consumer.cs  ConsumerCredit.Designer.cs  Controller.cs  FormConsumers.Designer.cs  FormConsumers.cs  FormInventory.Designer.cs  FormInventory.cs  FormMain.Designer.cs  FormMain.cs  FormSessions.Designer.cs  FormSessions.cs  Inventory.cs  Program.cs  Serializer.cs  Session.cs  TreasureChest.csproj
TreasureChest/Properties/: Resources.Designer.cs  Settings.Designer.cs
TreasureChestCore/: Consumer.cs  Controller.cs  Inventory.cs  Serializer.cs  Session.cs  TreasureChestCore.csproj
TreasureChestPrototypeUI/: ConsumerCredit.Designer.cs  ConsumerCredit.cs  FormInventory.cs  FormMain.Designer.cs  FormSessions.Designer.cs  TreasureChestPrototypeUI.csproj
TreasureChestUI/: ConsumedItemsControl.Designer.cs  ConsumedItemsControl.cs  ConsumerControl.Designer.cs  ConsumerControl.cs  ConsumerListControl.Designer.cs  ConsumerListControl.cs  InventoryControl.Designer.cs  InventoryControl.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  ManageConsumersWindow.Designer.cs  ManageConsumersWindow.cs  ManageConsumersWindow.resx  Program.cs  SessionPickerControl.Designer.cs  SessionPickerControl.cs  TreasureChestUI.csproj
TreasureChestUnitTests/: ConsumerTests.cs  ControllerTests.cs  InventoryTests.cs  SessionTests.cs  TreasureChestUnitTests.csproj
tests/: CMakeLists.txt  ConsumerTests.cpp  ControllerTests.cpp  InventoryTests.cpp  SessionTests.cpp
(+16 files in other folders)
